--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MrSoftTestTask</string>
+    <string name="sort">Sort By</string>
+    <string name="sortByName">Name</string>
+    <string name="sortByLevel">Level</string>
+    <string name="rateLabel">Rate</string>
 </resources>
