--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="sortByName">Name</string>
     <string name="sortByLevel">Level</string>
     <string name="rateLabel">Rate</string>
+    <string name="search">Search</string>
 </resources>
